# clincore-platform

./: .dockerignore  .env.docker  .env.doctor  .env.prod.example  .env.production.example  .env.staging  .gitignore  .importlinter  BUGFIX_PHASE15.md  CHANGELOG.md  Dockerfile  GH001_CLEANUP_REPORT.md  RATE_LIMIT_IMPLEMENTATION.md  README.md  admin-panel.html  alembic.ini  caselogs_backup_20260413.jsonl  check_create_route.py  check_routes.py  conftest.py  create_rate_limit_tables.sql  create_tenant.py  deploy_explorer.py  diag.py  diag2.py  diag_env.py  diag_shop.py  diag_shop2.py  diag_shop3.py  diag_shop4.py  diag_shop5.py  diag_shop6.py  diag_shop7.py  diag_shop8.py  diag_shop9.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  doctor-panel-fa.html  doctor_credentials.txt  (+48 more)
MCARE_Minimal/: requirements.txt
alembic/: README  env.py  script.py.mako
app/: main.py
backend/: .env.example  .env.test
clincore/: rls.py
clincore_root_backup/: config.py
data/: case_logs.jsonl
docker/: Dockerfile
docs/: deploy_checklist.md  ops.md  staging_validation.md
frontend/: clincore-shop-v2.html
nginx/: clincore.conf
scripts/: db_ping.py  dev_bootstrap.py  open_ui.ps1  smoke.ps1  smoke.py  smoke_live.py  smoke_test_rate_limit.py  smoke_test_rate_limit_clean.py
src/: config.py
tests/: conftest.py  test_access_audit.py  test_admin_usage.py  test_auth_api_keys.py  test_bootstrap.py  test_cases_v1.py  test_create_doctor_tenant.py  test_db_access_is_wrapper_only.py  test_feedback.py  test_finalize_signature.py  test_mcare_feedback.py  (+7 more)
(+99 files in other folders)
